fixed the colours of the score label, the label found above the integer label which was not coloring correctly. This is curious for the following reasons: 1) The int label itself was coloring. 2) The CSS file should not have been overwriting such color changes. The problem we found (on the 20th of October 2017 at 22:36 GMT+11) (actually that eminds me of a funny story, there was a real crackup time nathan and I were staying behind to finish our 206 and it was like 10 pm at this point, we were like delerious and couldnt think properly, just taking the piss really, we ended up writing this really long and verbose commit message. We began discussing how meta this was, and then got hungry and got maccas) was that the CSS was indeed overwriting the label or something like that. Anyway, Im not sure if you know but Im off to get Maccas :)

--- a/src/gui/GameWindow.fxml
+++ b/src/gui/GameWindow.fxml
@@ -20,7 +20,7 @@
       <RowConstraints maxHeight="105.0" minHeight="10.0" prefHeight="104.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <Label fx:id="_intLabel" alignment="CENTER" textAlignment="CENTER" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+      <Label fx:id="_intLabel" alignment="CENTER" styleClass="root" textAlignment="CENTER" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
          <font>
             <Font size="100.0" />
          </font>
@@ -30,7 +30,7 @@
             <Font size="35.0" />
          </font>
       </Label>
-      <Label fx:id="_questionNoLabel" alignment="CENTER" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
+      <Label fx:id="_questionNoLabel" alignment="CENTER" styleClass="root" textFill="WHITE" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
          <font>
             <Font size="25.0" />
          </font>
