--- a/src/gui/LevelSelectConfirmationWindow.fxml
+++ b/src/gui/LevelSelectConfirmationWindow.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXCheckBox?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
@@ -33,6 +34,11 @@
                </GridPane.margin>
             </JFXButton>
             <JFXButton fx:id="_start" buttonType="RAISED" onMouseClicked="#handleStartClick" prefHeight="50.0" prefWidth="100.0" text="Start" textFill="WHITE" GridPane.halignment="CENTER" />
+            <JFXCheckBox fx:id="_checkBox" checkedColor="#b20606" onAction="#handleCheckBoxClick" text="Reverse" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
+               <GridPane.margin>
+                  <Insets right="150.0" />
+               </GridPane.margin>
+            </JFXCheckBox>
          </children>
       </GridPane>
       <GridPane prefHeight="200.0" prefWidth="600.0">
