--- a/src/gui/StatsWindow.fxml
+++ b/src/gui/StatsWindow.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane onKeyPressed="#handleKeyPress" prefHeight="500.0" prefWidth="800.0" styleClass="root" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.StatsWindowController">
+<GridPane onKeyPressed="#handleKeyPress" onMouseEntered="#handleIconHover" prefHeight="500.0" prefWidth="800.0" styleClass="root" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.StatsWindowController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" />
    </columnConstraints>
@@ -22,7 +22,7 @@
       <RowConstraints vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <GridPane GridPane.rowIndex="1">
+      <GridPane onMouseEntered="#handleIconHover" GridPane.rowIndex="1">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="486.0" prefWidth="512.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="243.0" prefWidth="288.0" />
@@ -31,7 +31,34 @@
           <RowConstraints vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <GridPane GridPane.columnIndex="1">
+            <GridPane onMouseEntered="#handleIconHover">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label fx:id="_statLabel" onMouseEntered="#handleIconHover" stylesheets="@StatisticsTheme.css" text="88.8%" textFill="#f2f2f2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                     <font>
+                        <Font name="NanumGothic" size="130.0" />
+                     </font>
+                     <effect>
+                        <DropShadow blurType="ONE_PASS_BOX" />
+                     </effect>
+                  </Label>
+                  <Label fx:id="_statTitleLabel" onMouseEntered="#handleIconHover" text="TITLE" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.valignment="BOTTOM">
+                     <font>
+                        <Font name="NanumGothic" size="30.0" />
+                     </font>
+                     <effect>
+                        <DropShadow blurType="ONE_PASS_BOX" />
+                     </effect>
+                  </Label>
+               </children>
+            </GridPane>
+            <GridPane onMouseEntered="#handleIconHover" GridPane.columnIndex="1">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" />
                 <ColumnConstraints hgrow="SOMETIMES" />
@@ -45,7 +72,37 @@
                   <RowConstraints minHeight="20.0" prefHeight="69.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="_correctButton" mnemonicParsing="false" onAction="#handleCorrectButtonClick" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="correct" GridPane.rowIndex="2">
+                  <AnchorPane onMouseEntered="#handleIconHover">
+                     <children>
+                        <JFXButton fx:id="_switchLevelButton" buttonType="RAISED" layoutX="54.0" layoutY="24.0" onAction="#switchLevel" onMouseEntered="#handleIconHover" prefHeight="50.0" prefWidth="100.0" text="See Level 2" />
+                     </children></AnchorPane>
+                  <AnchorPane onMouseEntered="#handleIconHover" GridPane.rowIndex="5" />
+                  <FontAwesomeIconView fx:id="_averageStar" glyphName="STAR" onMouseEntered="#handleIconHover" size="25" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                  <FontAwesomeIconView fx:id="_correctStar" glyphName="STAR" onMouseEntered="#handleIconHover" size="25" text="" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                  <FontAwesomeIconView fx:id="_incorrectStar" glyphName="STAR" onMouseEntered="#handleIconHover" size="25" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                  <FontAwesomeIconView fx:id="_totalStar" glyphName="STAR" onMouseEntered="#handleIconHover" size="25" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
+                  <Button fx:id="_averageButton" mnemonicParsing="false" onAction="#handleAverageButtonClick" onMouseEntered="#handleIconHover" style="-: #383838;" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="\%88.8" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                     <effect>
+                        <DropShadow blurType="ONE_PASS_BOX" />
+                     </effect></Button>
+                  <Button fx:id="_totalButton" mnemonicParsing="false" onAction="#handleTotalButtonClick" onMouseEntered="#handleIconHover" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="total" GridPane.rowIndex="4">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                     <effect>
+                        <DropShadow blurType="ONE_PASS_BOX" />
+                     </effect></Button>
+                  <Button fx:id="_incorrectButton" mnemonicParsing="false" onAction="#handleIncorrectButtonClick" onMouseEntered="#handleIconHover" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="incorrect" GridPane.rowIndex="3">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                     <effect>
+                        <DropShadow blurType="ONE_PASS_BOX" />
+                     </effect></Button>
+                  <Button fx:id="_correctButton" mnemonicParsing="false" onAction="#handleCorrectButtonClick" onMouseEntered="#handleIconHover" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="correct" GridPane.rowIndex="2">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
@@ -55,68 +112,11 @@
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin></Button>
-                  <Button fx:id="_incorrectButton" mnemonicParsing="false" onAction="#handleIncorrectButtonClick" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="incorrect" GridPane.rowIndex="3">
-                     <font>
-                        <Font name="System Bold" size="13.0" />
-                     </font>
-                     <effect>
-                        <DropShadow blurType="ONE_PASS_BOX" />
-                     </effect></Button>
-                  <Button fx:id="_totalButton" mnemonicParsing="false" onAction="#handleTotalButtonClick" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="total" GridPane.rowIndex="4">
-                     <font>
-                        <Font name="System Bold" size="13.0" />
-                     </font>
-                     <effect>
-                        <DropShadow blurType="ONE_PASS_BOX" />
-                     </effect></Button>
-                  <Button fx:id="_averageButton" mnemonicParsing="false" onAction="#handleAverageButtonClick" style="-: #383838;" styleClass="statsBackground" stylesheets="@StatisticsTheme.css" text="\%88.8" GridPane.rowIndex="1">
-                     <font>
-                        <Font name="System Bold" size="13.0" />
-                     </font>
-                     <effect>
-                        <DropShadow blurType="ONE_PASS_BOX" />
-                     </effect></Button>
-                  <AnchorPane>
-                     <children>
-                        <JFXButton fx:id="_switchLevelButton" buttonType="RAISED" layoutX="54.0" layoutY="24.0" onAction="#switchLevel" prefHeight="50.0" prefWidth="100.0" text="See Level 2" />
-                     </children></AnchorPane>
-                  <AnchorPane GridPane.rowIndex="5" />
-                  <FontAwesomeIconView fx:id="_averageStar" glyphName="STAR" size="25" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                  <FontAwesomeIconView fx:id="_correctStar" glyphName="STAR" size="25" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-                  <FontAwesomeIconView fx:id="_incorrectStar" glyphName="STAR" size="25" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-                  <FontAwesomeIconView fx:id="_totalStar" glyphName="STAR" size="25" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
-               </children>
-            </GridPane>
-            <GridPane>
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints vgrow="SOMETIMES" />
-                <RowConstraints vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Label fx:id="_statLabel" stylesheets="@StatisticsTheme.css" text="88.8%" textFill="#f2f2f2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
-                     <font>
-                        <Font name="NanumGothic" size="130.0" />
-                     </font>
-                     <effect>
-                        <DropShadow blurType="ONE_PASS_BOX" />
-                     </effect>
-                  </Label>
-                  <Label fx:id="_statTitleLabel" text="TITLE" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.valignment="BOTTOM">
-                     <font>
-                        <Font name="NanumGothic" size="30.0" />
-                     </font>
-                     <effect>
-                        <DropShadow blurType="ONE_PASS_BOX" />
-                     </effect>
-                  </Label>
                </children>
             </GridPane>
          </children>
       </GridPane>
-      <GridPane>
+      <GridPane onMouseEntered="#handleIconHover">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -125,7 +125,7 @@
           <RowConstraints vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Press numbers to see what they are" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <Label onMouseEntered="#handleIconHover" text="Press numbers to see what they are" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
                   <Font name="NanumBarunGothic" size="30.0" />
                </font>
@@ -133,7 +133,7 @@
                   <DropShadow blurType="ONE_PASS_BOX" />
                </effect>
             </Label>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Statistics" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <Text fill="WHITE" onMouseEntered="#handleIconHover" strokeType="OUTSIDE" strokeWidth="0.0" text="Statistics" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font name="NanumGothic" size="120.0" />
                </font>
@@ -143,7 +143,7 @@
             </Text>
          </children>
       </GridPane>
-      <JFXButton fx:id="_exitButton" buttonType="RAISED" onAction="#handleExitButtonClick" text="X" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+      <JFXButton fx:id="_exitButton" buttonType="RAISED" onAction="#handleExitButtonClick" onMouseEntered="#handleIconHover" text="X" GridPane.halignment="LEFT" GridPane.valignment="TOP">
          <GridPane.margin>
             <Insets left="10.0" top="10.0" />
          </GridPane.margin>
