added question marks

--- a/src/gui/StatsWindow.fxml
+++ b/src/gui/StatsWindow.fxml
@@ -141,6 +141,14 @@
                   <DropShadow blurType="ONE_PASS_BOX" />
                </effect>
             </Text>
+            <FontAwesomeIconView glyphName="QUESTION" onMouseClicked="#handleHelpClick" size="35" styleClass="icon-standard-clickable" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
+               <effect>
+                  <DropShadow blurType="ONE_PASS_BOX" />
+               </effect>
+               <GridPane.margin>
+                  <Insets right="20.0" top="10.0" />
+               </GridPane.margin>
+            </FontAwesomeIconView>
          </children>
       </GridPane>
       <JFXButton fx:id="_exitButton" buttonType="RAISED" onAction="#handleExitButtonClick" onMouseEntered="#handleIconHover" text="X" GridPane.halignment="LEFT" GridPane.valignment="TOP">
