--- a/src/gui/MainWindow.fxml
+++ b/src/gui/MainWindow.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
@@ -35,13 +36,6 @@
             <DropShadow blurType="ONE_PASS_BOX" />
          </effect>
       </Text>
-      <JFXButton fx:id="_mainMenuTutorial" buttonType="RAISED" onAction="#handleTutorialClick" prefHeight="20.0" prefWidth="20.0" text="?" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
-         <font>
-            <Font size="15.0" />
-         </font>
-         <GridPane.margin>
-            <Insets right="10.0" top="10.0" />
-         </GridPane.margin></JFXButton>
       <JFXButton fx:id="_teachersButton" buttonType="RAISED" onAction="#handleTechersClick" prefHeight="20.0" text="Teachers" GridPane.halignment="LEFT" GridPane.valignment="TOP">
          <GridPane.margin>
             <Insets left="10.0" top="10.0" />
@@ -55,5 +49,13 @@
             <DropShadow blurType="ONE_PASS_BOX" />
          </effect>
       </Label>
+      <FontAwesomeIconView fx:id="_mainMenuTutorial" glyphName="QUESTION" onMouseClicked="#handleTutorialClick" onMousePressed="#handleTutorialClick" onMouseReleased="#handleTutorialClick" size="35" styleClass="icon-standard-clickable" text="" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
+         <effect>
+            <DropShadow blurType="ONE_PASS_BOX" />
+         </effect>
+         <GridPane.margin>
+            <Insets right="20.0" top="10.0" />
+         </GridPane.margin>
+      </FontAwesomeIconView>
    </children>
 </GridPane>
