--- a/src/gui/TataiTheme.css
+++ b/src/gui/TataiTheme.css
@@ -12,7 +12,6 @@
 	-fx-fill: white;
 }
 
-
 .icon-none {
 	-fx-fill: black;
 }
@@ -127,4 +126,9 @@
 	-fx-background-color: transparent;
 	-fx-text-fill: white;
 
+}
+
+.stat-help-divider {
+	-fx-border-width:  0 0 2 0;
+	-fx-border-color: white;
 }
