--- a/src/gui/CustomListEditView.fxml
+++ b/src/gui/CustomListEditView.fxml
@@ -2,8 +2,10 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXListView?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -21,11 +23,6 @@
     <RowConstraints maxHeight="97.0" minHeight="10.0" prefHeight="77.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <JFXButton fx:id="_exitButton" buttonType="RAISED" onAction="#handleExitClick" text="X" GridPane.halignment="LEFT" GridPane.valignment="TOP">
-         <GridPane.margin>
-            <Insets left="10.0" top="10.0" />
-         </GridPane.margin>
-      </JFXButton>
       <JFXListView fx:id="_listView" onMouseClicked="#handleListSelection" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <JFXButton fx:id="_deleteButton" buttonType="RAISED" onAction="#handleDeleteButton" prefHeight="50.0" prefWidth="100.0" text="Delete" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
       <JFXButton fx:id="_editButton" buttonType="RAISED" onAction="#handleEditButton" prefHeight="50.0" prefWidth="100.0" text="Edit" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
@@ -36,5 +33,13 @@
       </Label>
       <Label fx:id="_warningLabel" text="You currently have no custom lists." textFill="#bf0505" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM" />
       <JFXListView fx:id="_insideListView" onKeyPressed="#handleKeyPress" onMouseClicked="#handleInnerListSelection" onMousePressed="#handleInnerListSelection" onMouseReleased="#handleInnerListSelection" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <FontAwesomeIconView fx:id="_exitButton" glyphName="TIMES" onMouseClicked="#handleExitClick" onMousePressed="#handleExitClick" onMouseReleased="#handleExitClick" size="35" styleClass="icon-standard-clickable" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+         <effect>
+            <DropShadow blurType="ONE_PASS_BOX" />
+         </effect>
+         <GridPane.margin>
+            <Insets left="15.0" top="15.0" />
+         </GridPane.margin>
+      </FontAwesomeIconView>
    </children>
 </GridPane>
