--- a/src/gui/GameWindow.fxml
+++ b/src/gui/GameWindow.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -71,10 +73,13 @@
             <JFXButton fx:id="_recordButton" buttonType="RAISED" onAction="#handleRecordClick" prefHeight="50.0" prefWidth="100.0" styleClass="button1" stylesheets="@TataiTheme.css" text="Record" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
          </children>
       </GridPane>
-      <JFXButton fx:id="_exitButton" buttonType="RAISED" onAction="#handleQuitClick" styleClass="button1" text="X" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+      <FontAwesomeIconView fx:id="_exitButton" glyphName="TIMES" onMouseClicked="#handleQuitClick" onMousePressed="#handleQuitClick" onMouseReleased="#handleQuitClick" size="35" styleClass="icon-white-clickable" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+         <effect>
+            <DropShadow blurType="ONE_PASS_BOX" />
+         </effect>
          <GridPane.margin>
-            <Insets left="10.0" top="10.0" />
+            <Insets left="15.0" top="15.0" />
          </GridPane.margin>
-      </JFXButton>
+      </FontAwesomeIconView>
    </children>
 </GridPane>
