--- a/src/gui/PracticeWindow.fxml
+++ b/src/gui/PracticeWindow.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -123,11 +125,14 @@
                   <Font size="80.0" />
                </font>
             </Label>
-            <JFXButton fx:id="_exitButton" onAction="#handleExitClick" text="X" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+            <FontAwesomeIconView fx:id="_exitButton" glyphName="TIMES" onMouseClicked="#handleExitClick" onMousePressed="#handleExitClick" onMouseReleased="#handleExitClick" size="35" styleClass="icon-standard-clickable" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+               <effect>
+                  <DropShadow blurType="ONE_PASS_BOX" />
+               </effect>
                <GridPane.margin>
-                  <Insets left="10.0" top="10.0" />
+                  <Insets left="15.0" top="15.0" />
                </GridPane.margin>
-            </JFXButton>
+            </FontAwesomeIconView>
          </children>
       </GridPane>
    </children>
