--- a/src/gui/ReverseGamemodeWindow.fxml
+++ b/src/gui/ReverseGamemodeWindow.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -10,9 +12,9 @@
 
 <GridPane fx:id="_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" stylesheets="@TataiTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ReverseWindowGameController">
   <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="247.0" minWidth="0.0" prefWidth="73.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="707.0" minWidth="10.0" prefWidth="636.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="159.0" minWidth="10.0" prefWidth="86.0" />
+      <ColumnConstraints hgrow="SOMETIMES" />
+    <ColumnConstraints hgrow="SOMETIMES" />
+      <ColumnConstraints hgrow="SOMETIMES" />
   </columnConstraints>
   <rowConstraints>
       <RowConstraints maxHeight="236.0" minHeight="10.0" prefHeight="236.0" vgrow="SOMETIMES" />
@@ -22,78 +24,113 @@
    <children>
       <GridPane prefHeight="167.0" prefWidth="369.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="68.0" minWidth="0.0" prefWidth="0.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="146.0" minWidth="10.0" prefWidth="115.0" />
+            <ColumnConstraints hgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <JFXButton fx:id="_0" buttonType="RAISED" onAction="#handle0Click" prefHeight="80.0" prefWidth="80.0" text="0" GridPane.halignment="CENTER">
+            <JFXButton fx:id="_0" buttonType="RAISED" onAction="#handle0Click" prefHeight="80.0" prefWidth="80.0" styleClass="button1" text="0" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font size="40.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_1" buttonType="RAISED" onAction="#handle1Click" prefHeight="80.0" prefWidth="80.0" text="1" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+            <JFXButton fx:id="_1" buttonType="RAISED" onAction="#handle1Click" prefHeight="80.0" prefWidth="80.0" styleClass="button1" text="1" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font size="40.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_2" buttonType="RAISED" onAction="#handle2Click" prefHeight="80.0" prefWidth="80.0" text="2" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+            <JFXButton fx:id="_2" buttonType="RAISED" onAction="#handle2Click" prefHeight="80.0" prefWidth="80.0" styleClass="button1" text="2" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font size="40.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_3" buttonType="RAISED" onAction="#handle3Click" prefHeight="80.0" prefWidth="80.0" text="3" GridPane.columnIndex="3" GridPane.halignment="CENTER">
+            <JFXButton fx:id="_3" buttonType="RAISED" onAction="#handle3Click" prefHeight="80.0" prefWidth="80.0" styleClass="button1" text="3" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font size="40.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_4" buttonType="RAISED" onAction="#handle4Click" prefHeight="80.0" prefWidth="80.0" text="4" GridPane.columnIndex="4" GridPane.halignment="CENTER">
+            <JFXButton fx:id="_4" buttonType="RAISED" onAction="#handle4Click" prefHeight="80.0" prefWidth="80.0" styleClass="button1" text="4" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font size="40.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_5" buttonType="RAISED" onAction="#handle5Click" prefHeight="80.0" prefWidth="80.0" text="5" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <JFXButton fx:id="_5" buttonType="RAISED" onAction="#handle5Click" prefHeight="80.0" prefWidth="80.0" styleClass="button1" text="5" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font size="40.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_6" buttonType="RAISED" onAction="#handle6Click" prefHeight="80.0" prefWidth="80.0" text="6" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <JFXButton fx:id="_6" buttonType="RAISED" onAction="#handle6Click" prefHeight="80.0" prefWidth="80.0" styleClass="button1" text="6" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font size="40.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_7" buttonType="RAISED" onAction="#handle7Click" prefHeight="80.0" prefWidth="80.0" text="7" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <JFXButton fx:id="_7" buttonType="RAISED" onAction="#handle7Click" prefHeight="80.0" prefWidth="80.0" styleClass="button1" text="7" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font size="40.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_8" buttonType="RAISED" onAction="#handle8Click" prefHeight="80.0" prefWidth="80.0" text="8" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <JFXButton fx:id="_8" buttonType="RAISED" onAction="#handle8Click" prefHeight="80.0" prefWidth="80.0" styleClass="button1" text="8" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font size="40.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_9" buttonType="RAISED" onAction="#handle9Click" prefHeight="80.0" prefWidth="80.0" text="9" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <JFXButton fx:id="_9" buttonType="RAISED" onAction="#handle9Click" prefHeight="80.0" prefWidth="80.0" styleClass="button1" text="9" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font size="40.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_clearButton" buttonType="RAISED" onAction="#handleDeleteClick" prefHeight="80.0" prefWidth="95.0" text="Clear" GridPane.columnIndex="6" GridPane.halignment="RIGHT">
+            <JFXButton fx:id="_clearButton" buttonType="RAISED" onAction="#handleDeleteClick" prefHeight="80.0" prefWidth="95.0" styleClass="button1" text="Clear" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font size="20.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
             </JFXButton>
-            <JFXButton fx:id="_submitButton" buttonType="RAISED" onAction="#handlesubmitClick" prefHeight="80.0" prefWidth="95.0" text="Submit" GridPane.columnIndex="6" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+            <JFXButton fx:id="_submitButton" buttonType="RAISED" onAction="#handlesubmitClick" prefHeight="80.0" prefWidth="95.0" styleClass="button1" text="Submit" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font size="16.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
             </JFXButton>
          </children>
       </GridPane>
@@ -113,10 +150,13 @@
             <Font size="60.0" />
          </font>
       </Label>
-      <JFXButton fx:id="_exitButton" buttonType="RAISED" onAction="#handleExitClick" text="X" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+      <FontAwesomeIconView fx:id="_exitButton" glyphName="TIMES" onMouseClicked="#handleExitClick" onMousePressed="#handleExitClick" onMouseReleased="#handleExitClick" size="35" styleClass="icon-white-clickable" GridPane.halignment="LEFT" GridPane.valignment="TOP">
          <GridPane.margin>
-            <Insets left="10.0" top="10.0" />
+            <Insets left="15.0" top="15.0" />
          </GridPane.margin>
-      </JFXButton>
+         <effect>
+            <DropShadow blurType="ONE_PASS_BOX" />
+         </effect>
+      </FontAwesomeIconView>
    </children>
 </GridPane>
