--- a/src/gui/TataiTheme.css
+++ b/src/gui/TataiTheme.css
@@ -33,6 +33,12 @@
 	-fx-effect: dropshadow( one-pass-box , #C98910, 10, 0.0, 0, 0 );
 }
 
+.icon-white-clickable {
+	-fx-fill: white;
+}
+.icon-white-clickable:hover {
+	-fx-fill: #383838;
+}
 .table-view .column-header .label {
     -fx-text-fill: white;
 }
@@ -86,6 +92,10 @@
 .button1{
 	-fx-background-color: white;
 	-fx-text-fill: #383838;
+}
+.button1:hover {
+	-fx-background-color: #383838;
+	-fx-text-fill: white;
 }
 
 .text-input {
