--- a/src/gui/StatsWindow.fxml
+++ b/src/gui/StatsWindow.fxml
@@ -151,10 +151,13 @@
             </FontAwesomeIconView>
          </children>
       </GridPane>
-      <JFXButton fx:id="_exitButton" buttonType="RAISED" onAction="#handleExitButtonClick" onMouseEntered="#handleIconHover" text="X" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+      <FontAwesomeIconView fx:id="_exitButton" glyphName="ARROW_LEFT" onMouseClicked="#handleExitButtonClick" onMousePressed="#handleExitButtonClick" onMouseReleased="#handleExitButtonClick" size="35" styleClass="icon-standard-clickable" GridPane.halignment="LEFT" GridPane.valignment="TOP">
+         <effect>
+            <DropShadow blurType="ONE_PASS_BOX" />
+         </effect>
          <GridPane.margin>
-            <Insets left="10.0" top="10.0" />
+            <Insets left="15.0" top="15.0" />
          </GridPane.margin>
-      </JFXButton>
+      </FontAwesomeIconView>
    </children>
 </GridPane>
