--- a/src/gui/TataiTheme.css
+++ b/src/gui/TataiTheme.css
@@ -10,6 +10,7 @@
 
 .icon-standard-clickable:hover {
 	-fx-fill: white;
+	-fx-cursor: hand;
 }
 
 .icon-none {
@@ -38,6 +39,7 @@
 }
 .icon-white-clickable:hover {
 	-fx-fill: #383838;
+	-fx-cursor: hand;
 }
 .table-view .column-header .label {
     -fx-text-fill: white;
@@ -96,6 +98,7 @@
 .button1:hover {
 	-fx-background-color: #383838;
 	-fx-text-fill: white;
+	-fx-cursor: hand;
 }
 
 .text-input {
@@ -112,6 +115,7 @@
 
 .list-cell:filled:hover {
     -fx-text-fill: #cc0404;
+    -fx-cursor: hand;
 }
 
 .list-cell:filled:selected:focused, .list-cell:filled:selected {
@@ -130,13 +134,14 @@
 	-fx-text-fill: white;
 	-fx-background-color: #383838;
 	-fx-alignment:center;
+	 -fx-font-size:18.0;
 }
 
 .label {
 	-fx-background-color: transparent;
 	-fx-text-fill: white;
 
-}
+} 
 
 .stat-help-divider {
 	-fx-border-width:  0 0 2 0;
