--- a/src/gui/StatsHelpWindow.fxml
+++ b/src/gui/StatsHelpWindow.fxml
@@ -18,13 +18,16 @@
       <RowConstraints vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <Label text="Skill Level" GridPane.halignment="CENTER" GridPane.valignment="TOP">
+      <Label text="Skill Level" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
          <font>
             <Font size="96.0" />
          </font>
          <effect>
             <DropShadow blurType="ONE_PASS_BOX" />
          </effect>
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
       </Label>
       <FontAwesomeIconView fx:id="_backButton" glyphName="ARROW_LEFT" onKeyPressed="#handleKeyPress" onMouseClicked="#handleBackClick" onMousePressed="#handleBackClick" onMouseReleased="#handleBackClick" size="35" styleClass="icon-standard-clickable" GridPane.halignment="LEFT" GridPane.valignment="TOP">
          <effect>
